Preformatted text colour dark mode fix

--- a/src/css/02-base/_typography.scss
+++ b/src/css/02-base/_typography.scss
@@ -40,8 +40,8 @@ a {
 
 pre {
   overflow: scroll;
-  background-color: $black;
-  color: var(--textColorInverse);
+  background-color: $bg-dark;
+  color: $light-grey;
   padding: 1rem;
 }
 
